Contract Configurator 1.15.4
- Fixed issue where contract limits could be exceeded in the Available tab of Mission Control (thanks severedsolo).
- Removed MiniAVC.

Contract Configurator 1.15.3
- New Mission Control layout. Now all contracts that are eligible are available all the time (players are no longer at the mercy of the RNG to get the contracts they want).  Also, can view the details of what contracts are *not yet* available, and what it takes to make them available.
- New contract art (special thanks to Enceos)!
- Contract generation overhaul.  Overhaul to the contract generation system for massive performance improvements.  Contracts are no longer generated in-flight (no garbage, no stutters).
- Added title and related attributes for REQUIREMENT nodes.
- Added title and related attributes for DATA nodes.
- Added sortKey for CONTRACT_TYPE and CONTRACT_GROUP nodes.
- New List.SelectUnique() method for selecting unique values (replaces selecting a random value and hoping that it hasn't been used before).
- New DATA_EXPAND node allows a CONTRACT_TYPE to be duplicated across a list of values (eg. duplicated for each Celestial Body).
- New CelestialBody.Index() method to get the global index of a body (for sorting).
- More warnings to steer contract authors towards more performant and more player-friendly ways of writing contracts.
- New ResourceConsumption parameter.
- Fixed issue where the state of some parameters wasn't immediately reset when switching vessels, allowing erroneous contract completion (thanks NathanKell & leudaimon).
- Fixed bug in uniqueness checks when vessels are involved which caused the uniquness check not to work (thanks severedsolo).
- Fixed issue where CollectScience parameters weren't always showing the checkmarks when partially completed (thanks jlcarneiro & severedsolo).

Contract Configurator 1.14.0
- Added suppport for partModuleType in PartValidation.
- Added AtMost and AtLeast set requirements.