@@ -1,5 +1,6 @@
 Contract Configurator 1.15.4
 - Fixed issue where contract limits could be exceeded in the Available tab of Mission Control (thanks severedsolo).
+- Fixed possible exception in HasCrew (thanks cpottinger).
 - Removed MiniAVC.
 
 Contract Configurator 1.15.3
